# TinyTools-ExtraTools

./: .gitignore  README.md
'fy'-suites/: .gitignore  FY_STRATEGY_SETTINGS.md  INTERNAL_DOCS_RELOCATED.md  README.md  SECURITY.md  fy-manifest.yaml  pyproject.toml  pytest.ini  requirements-dev.txt
'fy'-suites/.github/workflows/: fy-suites-ci.yml
'fy'-suites/brokenify/: suite_ownership.json
'fy'-suites/coda/: README.md  __init__.py  suite_ownership.json
'fy'-suites/coda/adapter/: __init__.py  cli.py  service.py
'fy'-suites/coda/tools/: __init__.py  assembly.py  hub_cli.py
'fy'-suites/contractify/: .gitignore  CONTRACT_GOVERNANCE_SCOPE.md  README.md  REMOVED_FILES.txt  __init__.py  contract-audit-task.md  contract-reset-task.md  contract-solve-task.md  contract_governance_input.md  suite_ownership.json
'fy'-suites/contractify/adapter/: __init__.py  __main__.py  cli.py  service.py
'fy'-suites/contractify/examples/: README.md  contract_audit.sample.json  contract_discovery.sample.json
'fy'-suites/contractify/tools/: __init__.py  __main__.py  adr_governance.py  audit_pipeline.py  canonical_graph.py  coda_exports.py  conflicts.py  discovery.py  drift_analysis.py  freeze_committed_reports.py  hub_cli.py  importer.py  investigation_suite.py  minimal_repo.py  models.py  relations.py  repo_paths.py  runtime_mvp_spine.py  sync_contractify_skills.py  validate_contractify_skill_paths.py  versioning.py
'fy'-suites/delagecy/: README.md  __init__.py  legacy_removal_tracker.md
'fy'-suites/delagecy/tools/: __init__.py  __main__.py  hub_cli.py  registry.py  repo_paths.py  reporting.py  scanner.py
'fy'-suites/despaghettify/: README.md  __init__.py  baseline_metrics.json  despaghettification_completed_log.md  spaghetti-add-task-to-meet-trigger.md  spaghetti-autonomous-agent-task.md  spaghetti-check-task.md  spaghetti-clean-task.md  spaghetti-reset-task.md  spaghetti-setup.json  spaghetti-setup.md  spaghetti-solve-task.md  suite_ownership.json
'fy'-suites/despaghettify/adapter/: __init__.py  __main__.py  cli.py  service.py
'fy'-suites/diagnosta/: README.md  __init__.py  suite_ownership.json
'fy'-suites/docify/: DOCUMENTATION_QUALITY_STANDARD.md  README.md  __init__.py  baseline_docstring_coverage.json  documentation-audit-task.md  documentation-check-task.md  documentation-docstring-synthesize-task.md  documentation-reset-task.md  documentation-solve-task.md  suite_ownership.json
'fy'-suites/dockerify/: README.md  __init__.py  dockerify-audit-task.md  dockerify-check-task.md  dockerify-reset-task.md  dockerify-solve-task.md  pyproject.toml  suite_ownership.json
'fy'-suites/documentify/: README.md  __init__.py  documentify-audit-task.md  documentify-check-task.md  documentify-reset-task.md  documentify-solve-task.md  documentify_implementation_input.md  pyproject.toml  suite_ownership.json
'fy'-suites/fy_platform/: README.md  __init__.py  compatibility_matrix.wave1_baseline.json  compatibility_matrix.wave1_baseline.md  deprecation_matrix.wave1.json  suite_ownership.json
'fy'-suites/metrify/: README.md  __init__.py  suite_ownership.json
'fy'-suites/mvpify/: README.md  __init__.py  suite_ownership.json
'fy'-suites/observifyfy/: README.md  __init__.py  observifyfy-audit-task.md  observifyfy-check-task.md  observifyfy-reset-task.md  observifyfy-solve-task.md  suite_ownership.json
'fy'-suites/postmanify/: README.md  __init__.py  postmanify-sync-task.md  suite_ownership.json
'fy'-suites/securify/: README.md  __init__.py  suite_ownership.json
'fy'-suites/templatify/: README.md  __init__.py  suite_ownership.json
'fy'-suites/testify/: README.md  __init__.py  pyproject.toml  suite_ownership.json  testify-audit-task.md  testify-check-task.md  testify-reset-task.md  testify-solve-task.md
'fy'-suites/usabilify/: README.md  __init__.py  suite_ownership.json
ArchitecturalKnowledgeDB/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ArchitecturalKnowledgeDB/architectural_knowledge_db/: __init__.py  cli.py  config.py  ids.py  mcp.py  mcp_stdio.py  models.py
ArchitecturalKnowledgeDB/docs/: INTERNAL_DOCS_RELOCATED.md  README.md
ArchitecturalKnowledgeDB/scripts/: refresh_akdb_db.bat
ArchitecturalKnowledgeDB/tests/: conftest.py  test_adaptive.py  test_api.py  test_authoring.py  test_cognition.py  test_completeness.py  test_consistency.py  test_context_pack.py  test_entities.py  test_export_proof.py  test_git_scanner.py  test_guardrail.py  test_import_export.py  test_mcp_compact.py  test_mcp_stdio.py  test_project_isolation.py  test_reasoning.py  test_reingest.py  test_roadmap.py  test_semantic.py  test_semantic_hardening.py  test_setup.py  test_staleness.py  test_survey.py  test_uml.py
(+668 files in other folders)
