[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "architectural-knowledge-db"
version = "0.1.0"
description = "Local multi-project architecture knowledge database with Git provenance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "typer>=0.12",
  "uvicorn>=0.29",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8"
]

[project.scripts]
akdb = "architectural_knowledge_db.cli:main"
architectural-knowledge-db = "architectural_knowledge_db.cli:main"
akdb-mcp = "architectural_knowledge_db.mcp_stdio:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["architectural_knowledge_db*"]

[tool.setuptools.package-data]
architectural_knowledge_db = [
  "db/schema/*.sql",
  "templates/starter/*.md",
  "templates/starter/adr/*.md",
  "templates/starter/specs/*.md",
  "templates/starter/uml/*.mmd",
  "templates/starter/uml/*.puml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
